fixed alignment of project overlay

--- a/src/App.scss
+++ b/src/App.scss
@@ -43,7 +43,7 @@ $generic-bg: #db4c3f;
   -webkit-box-shadow: $generic-box-shadow;
   box-shadow: $generic-box-shadow;
   position: absolute;
-  width: 100%;
+  width: 96.5%;
   z-index: 1;
   top: 85px;
   border-radius: 3px;
